--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
             "email": "hui-ho@outlook.com"
         }
     ],
-    "require": {},
+    "require": {
+        "erusev/parsedown": "^1.7"
+    },
     "require-dev": {
         "orchestra/testbench": "^4.5"
     },
