Package Auto Discovery

--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,12 @@
         "psr-4": {
             "devprojoh\\Press\\Tests\\": "tests/"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "devprojoh\\Press\\PressBaseServiceProvider"
+            ]
+        }
     }
 }
